grammar.txt
expr      = prim | symb |'(', expr, ')';
symb      = symbFirst | symb,('[', seq,']' | '[[', seq, ']]')
symbFirst = name | '{', seq, '}' ;
seq       = nil | expr, seqTail ;
seqTail   = nil | ',', expr, seqTail ;
prim      = number | string ;
number    = integer| float  ;
